--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,11 +40,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Create Release
-        uses: peter-evans/create-release@v1
+        uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ github.ref_name }}
-          release_name: ${{ github.ref_name }}
+          name: ${{ github.ref_name }}
           body: |
             Automated release created by CI. See CHANGELOG.md for details.
-          draft: false
           prerelease: true
