.gitignore for Promotion documentation (local only) PROMOTION_PLAN.md SOCIAL_MEDIA_TEMPLATES.md EXECUTION_CHECKLIST.md SUMMARY.md

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,9 @@ venv/
 
 # Test setup
 ollama_ops.py
+
+# Promotion documentation (local only)
+PROMOTION_PLAN.md
+SOCIAL_MEDIA_TEMPLATES.md
+EXECUTION_CHECKLIST.md
+SUMMARY.md
